Database and name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-hk",
+  "name": "hkxpmg",
   "version": "0.1.0",
   "description": "test",
   "main": "index.js",
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/angelxehg/test-hk.git"
+    "url": "git+https://github.com/angelxehg/hkxpmg.git"
   },
   "keywords": [
     "test",
