--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "local-serve": "live-server --port=8000 --host=10.0.2.15",
+    "remote-serve": "live-server --port=8000"
   },
   "author": "Angel Hurtado (@angelxehg)",
   "license": "MIT",
