--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "local-serve": "live-server --port=8000 --host=10.0.2.15",
-    "remote-serve": "live-server --port=8000"
+    "serve": "live-server --port=8000 --host=10.0.2.15"
   },
   "author": "Angel Hurtado (@angelxehg)",
   "license": "MIT",
