--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Angel Hurtado (@angelxehg)",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
